<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".onboarding.ob1">

    <ImageView
        android:id="@+id/ivOnboardimg1"
        android:layout_width="313dp"
        android:layout_height="217dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvObDiscription1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/onb1" />

    <TextView
        android:id="@+id/tvObDiscription1"
        android:layout_width="310dp"
        android:layout_height="103dp"
        android:fontFamily="casual"
        android:text="@string/OnBoardingDiscription1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnObNext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSkip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toTopOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="278dp"
        android:layout_height="79dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/tvOnboardTitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvOnboardTitle1"
        android:layout_width="316dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0"
        android:text="@string/OnboardingTitle1"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivOnboardimg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnObNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:text="@string/OBnext"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>